crates/lang/macro/tests/ui/contract/fail/message-unknown-property.stderr
error: unknown ink! attribute (path)
  --> $DIR/message-unknown-property.rs:15:15
   |
15 |         #[ink(unknown_marker)]
   |               ^^^^^^^^^^^^^^
